--- a/resources/views/ItemList/Components/CategoryItem.twig
+++ b/resources/views/ItemList/Components/CategoryItem.twig
@@ -55,6 +55,8 @@
                     ${ itemData | itemName }
                 </a>
                 <div class="thumb-meta">
+                    <slot name="BeforePrices"></slot>
+
                     <div class="prices">
                         <div v-if="itemData.prices.rrp && itemData.prices.rrp.price.value > 0 && itemData.prices.rrp.price.value > itemData.prices.default.unitPrice.value" class="price-view-port">
                             <del class="crossprice">
@@ -66,6 +68,8 @@
                             ${ itemData.prices.default.unitPrice.formatted } *
                         </div>
                     </div>
+
+                    <slot name="AfterPrices"></slot>
 
                     <div class="category-unit-price" v-if="!(itemData.unit.unitOfMeasurement === 'C62' && itemData.unit.content === 1)">
                         <span>${ itemData.unit.content }</span>
