--- a/resources/views/Homepage/DefaultHomepage.twig
+++ b/resources/views/Homepage/DefaultHomepage.twig
@@ -302,7 +302,7 @@
                         <ul class="product-list row grid">
                             {% for item in categoryList1 %}
                                 <li class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
-                                    {% include "Ceres::Category.Item.Partials.CategoryListItem" with { 'item': item } %}
+                                    {% include "Ceres::Category.Partials.CategoryListItem" with { 'item': item } %}
                                 </li>
                             {% endfor %}
                         </ul>
@@ -391,7 +391,7 @@
                         <ul class="product-list row grid">
                             {% for item in categoryList2 %}
                                 <li class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
-                                    {% include "Ceres::Category.Item.Partials.CategoryListItem" with { 'item': item } %}
+                                    {% include "Ceres::Category.Partials.CategoryListItem" with { 'item': item } %}
                                 </li>
                             {% endfor %}
                         </ul>
