CHANGE Pagination.twig - hide first page button if the user is at page 3 and this is the last page

--- a/resources/views/Category/Partials/Pagination.twig
+++ b/resources/views/Category/Partials/Pagination.twig
@@ -3,7 +3,7 @@
         <ul class="pagination col-xs-12 m-y-0">
 
             <!-- FIRST PAGE LINK -->
-            {% if ceresConfig.pagination.showFirstPage and currentPage > 2 %}
+            {% if ceresConfig.pagination.showFirstPage and pageMax > 3 and currentPage > 2 %}
                 <li class="page-item">
                     <a class="page-link" href="{{ queryString({ 'page': 1 }) }}">
                         <i class="fa fa-angle-double-left" aria-hidden="true"></i>
