--- a/resources/views/Category/CategoryView.twig
+++ b/resources/views/Category/CategoryView.twig
@@ -22,10 +22,10 @@
             <div class="row m-t-1">
                 <div class="col-xs-12">
                     <h1 class="h2 category-title">{{ category.details[0].name }}</h1>
-                    {% if categoryDescriptionTop == "description1" or categoryDescriptionTop == "both" %}
+                    {% if (categoryDescriptionTop == "description1" or categoryDescriptionTop == "both") and category.details[0].description | trim is not empty %}
                         <div class="category-description m-b-1">{{ category.details[0].description | raw }}</div>
                     {% endif %}
-                    {% if categoryDescriptionTop == "description2" or categoryDescriptionTop == "both" %}
+                    {% if (categoryDescriptionTop == "description2" or categoryDescriptionTop == "both") and category.details[0].description2 | trim is not empty %}
                         <div class="category-description m-b-1">{{ category.details[0].description2 | raw }}</div>
                     {% endif %}
                 </div>
@@ -107,10 +107,10 @@
         {% endif %}
         
         <div class="col-xs-12">
-            {% if categoryDescriptionBottom == "description1" or categoryDescriptionBottom == "both" %}
+            {% if (categoryDescriptionBottom == "description1" or categoryDescriptionBottom == "both") and category.details[0].description | trim is not empty %}
                 <div class="category-description m-b-1">{{ category.details[0].description | raw }}</div>
             {% endif %}
-            {% if categoryDescriptionBottom == "description2" or categoryDescriptionBottom == "both" %}
+            {% if (categoryDescriptionBottom == "description2" or categoryDescriptionBottom == "both") and category.details[0].description2 | trim is not empty %}
                 <div class="category-description m-b-1">{{ category.details[0].description2 | raw }}</div>
             {% endif %}
         </div>
