--- a/resources/scss/ceres/views/Templates/Hero/_component-hero.scss
+++ b/resources/scss/ceres/views/Templates/Hero/_component-hero.scss
@@ -214,6 +214,7 @@
 		opacity: 0;
 		transition: opacity .1s ease-out;
 		visibility: hidden;
+		z-index: 1;
 	}
 
 	&.with-icon {
@@ -234,8 +235,7 @@
 			opacity: 0;
 			transition: opacity .1s ease-out;
 			visibility: hidden;
-
-			
+			z-index: 10;
 		}
 
 		&.refreshing {
