--- a/resources/views/ItemList/Components/Filter/ItemFilterList.twig
+++ b/resources/views/ItemList/Components/Filter/ItemFilterList.twig
@@ -8,15 +8,15 @@
         </a>
 
         <div class="collapse" :class="{in: isActive}" id="filterCollapse">
-            <div class="container-max page-content">
+            <div class="container-max page-content component-loading with-icon refreshing" :class="{ 'isLoading': isLoading }">
                 <div class="card-columns">
                     <item-filter v-for="facet in facets" :facet="facet" :key="facet.id"></item-filter>
                 </div>
 
                 <div class="row">
                     <div class="col-xs-6">
-                        <button type="button" class="btn btn-primary btn-medium" data-toggle="collapse" href="#filterCollapse" aria-controls="filterCollapse" @click="$store.dispatch('loadItemList')">
-                            <i aria-hidden="true">🦄</i> Anwenden
+                        <button type="button" class="btn btn-success" data-toggle="collapse" href="#filterCollapse" aria-controls="filterCollapse" @click="$store.dispatch('loadItemList')">
+                            <i aria-hidden="true">🦄</i> Filter anwenden <i aria-hidden="true">🦄</i>
                         </button>
                     </div>
                     <div class="col-xs-6 text-xs-right">
