--- a/resources/views/ItemList/Components/Filter/ItemFilterList.twig
+++ b/resources/views/ItemList/Components/Filter/ItemFilterList.twig
@@ -4,7 +4,9 @@
         {{ component( "Ceres::ItemList.Components.Filter.ItemFilterPrice") }}
 
         <a class="btn btn-link filter-toggle" data-toggle="collapse" href="#filterCollapse" aria-controls="filterCollapse" @click="toggleOpeningState()">
-            <i class="fa fa-sliders default-float" aria-hidden="true"></i> {{ trans("Ceres::Template.itemFilter") }}
+            <i class="fa fa-sliders default-float" aria-hidden="true"></i>
+            <span v-if="isInitialFacetSelectionActive">{{ trans("Ceres::Template.itemFilter") }}</span>
+            <span v-else>{{ trans("Ceres::Template.itemFilterApply") }}</span>
         </a>
 
         <div class="collapse" :class="{in: isActive}" id="filterCollapse">
@@ -14,14 +16,11 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-xs-6">
-                        <button type="button" class="btn btn-success" data-toggle="collapse" href="#filterCollapse" aria-controls="filterCollapse" @click="$store.dispatch('loadItemList')">
-                            <i aria-hidden="true">🦄</i> Filter anwenden <i aria-hidden="true">🦄</i>
-                        </button>
-                    </div>
-                    <div class="col-xs-6 text-xs-right">
-                        <button type="button" class="btn btn-primary btn-medium" data-toggle="collapse" href="#filterCollapse" aria-controls="filterCollapse" @click="toggleOpeningState()">
-                            <i class="fa fa-times" aria-hidden="true"></i> {{ trans("Ceres::Template.itemClose") }}
+                    <div class="col-xs-12 text-xs-right">
+                        <button type="button" class="btn btn-primary btn-medium-large" data-toggle="collapse" href="#filterCollapse" aria-controls="filterCollapse" @click="toggleOpeningState()">
+                            <i :class="{ 'fa-times': isInitialFacetSelectionActive, 'fa-check': !isInitialFacetSelectionActive }" class="fa" aria-hidden="true"></i>
+                            <span v-if="isInitialFacetSelectionActive">{{ trans("Ceres::Template.itemClose") }}&nbsp;</span>
+                            <span v-else>{{ trans("Ceres::Template.itemFilterApply") }}&nbsp;</span>
                         </button>
                     </div>
                 </div>
