--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -19024,24 +19024,28 @@ html.ie .basket-preview .basket-item-container .basket-item-container-right .qty
 
 .list-controls .list-controls-inner {
   background: #efefef;
-  padding: .5em;
+  padding: 0.5em;
 }
 
 .list-controls .list-sort,
 .list-controls .list-itemsperpage {
   display: block;
-  padding: .5em;
+  padding: 0.5em;
 }
 
 .list-controls .selected-filters {
   display: inline-block;
   float: right;
+  margin-top: 10px;
 }
 
 .list-controls .selected-filters .selected-filter {
-  font-size: .8rem;
+  font-size: 0.8rem;
   padding: 0;
-  margin: 10px 0 5px 10px;
+  margin: 0 0 0 10px;
+  padding: 5px 10px;
+  background-color: #efefef;
+  color: #008ebd;
   float: left;
   cursor: pointer;
   display: inline-block;
@@ -19056,7 +19060,7 @@ html.ie .basket-preview .basket-item-container .basket-item-container-right .qty
 }
 
 .list-controls .filter-toggle i {
-  transition: all .3s ease;
+  transition: all 0.3s ease;
 }
 
 .list-controls .filter-toggle[aria-expanded="true"] i {
@@ -19088,7 +19092,7 @@ html.ie .basket-preview .basket-item-container .basket-item-container-right .qty
   text-transform: uppercase;
   font-size: 1.2rem;
   border-bottom: 1px solid #b2b1a7;
-  padding-bottom: .5rem;
+  padding-bottom: 0.5rem;
   font-weight: bold;
   color: #4D4F4D;
 }
@@ -19100,42 +19104,42 @@ html.ie .basket-preview .basket-item-container .basket-item-container-right .qty
 }
 
 .list-controls #filterCollapse .page-content .card .form-check .form-check-input:checked + label::before, .list-controls #filterCollapse .page-content .cmp-address-list .items > div:first-child .form-check .form-check-input:checked + label::before, .cmp-address-list .list-controls #filterCollapse .page-content .items > div:first-child .form-check .form-check-input:checked + label::before {
-  font-family: 'FontAwesome';
+  font-family: "FontAwesome";
   content: "\f046";
   opacity: 1;
 }
 
 .list-controls #filterCollapse .page-content .card .form-check .form-check-label, .list-controls #filterCollapse .page-content .cmp-address-list .items > div:first-child .form-check .form-check-label, .cmp-address-list .list-controls #filterCollapse .page-content .items > div:first-child .form-check .form-check-label {
-  padding: .5rem 0;
+  padding: 0.5rem 0;
   padding-left: 0;
   color: #4D4F4D;
   display: block;
-  transition: all .1s ease;
+  transition: all 0.1s ease;
 }
 
 .list-controls #filterCollapse .page-content .card .form-check .form-check-label:hover, .list-controls #filterCollapse .page-content .cmp-address-list .items > div:first-child .form-check .form-check-label:hover, .cmp-address-list .list-controls #filterCollapse .page-content .items > div:first-child .form-check .form-check-label:hover {
   background: #f7f7f9;
   color: #4D4F4D;
-  transition: all .1s ease;
-  padding-left: .5rem;
+  transition: all 0.1s ease;
+  padding-left: 0.5rem;
 }
 
 .list-controls #filterCollapse .page-content .card .form-check .form-check-label::before, .list-controls #filterCollapse .page-content .cmp-address-list .items > div:first-child .form-check .form-check-label::before, .cmp-address-list .list-controls #filterCollapse .page-content .items > div:first-child .form-check .form-check-label::before {
-  font-family: 'FontAwesome';
+  font-family: "FontAwesome";
   content: "\f046";
   opacity: 0;
   position: absolute;
-  left: .5rem;
+  left: 0.5rem;
 }
 
 .list-controls #filterCollapse .page-content .card .form-check .filter-badge, .list-controls #filterCollapse .page-content .cmp-address-list .items > div:first-child .form-check .filter-badge, .cmp-address-list .list-controls #filterCollapse .page-content .items > div:first-child .form-check .filter-badge {
   position: absolute;
   display: inline-block;
-  font-size: .85rem;
+  font-size: 0.85rem;
   background: #f4f4f4;
-  padding: .1rem 0;
+  padding: 0.1rem 0;
   color: #7a7f7f;
-  right: .5rem;
+  right: 0.5rem;
   text-align: center;
   min-width: 3em;
   top: 50%;
@@ -19151,7 +19155,7 @@ html.ie .basket-preview .basket-item-container .basket-item-container-right .qty
     top: 50%;
     transform: translateY(-50%);
     position: absolute;
-    right: .5em;
+    right: 0.5em;
   }
 }
 
@@ -19190,7 +19194,7 @@ html.ie .basket-preview .basket-item-container .basket-item-container-right .qty
 .sidebar-categories ul li a {
   display: block;
   color: #4D4F4D;
-  padding: .75rem 15px;
+  padding: 0.75rem 15px;
   font-size: 1rem;
   cursor: pointer;
 }
