changed responsive hidden-?-up class to d-?-none

--- a/resources/views/Widgets/Header/NavigationWidget.twig
+++ b/resources/views/Widgets/Header/NavigationWidget.twig
@@ -23,7 +23,7 @@
                     <img alt="{{ Twig.print('trans("Ceres::Template.headerCompanyName")') }}" src="{{ companyLogoUrl }}" class="img-fluid" crossorigin="anonymous" />
                 </a>
 
-                <button id="btnMainMenuToggler" v-open-mobile-navigation class="navbar-toggler hidden-lg-up" type="button">
+                <button id="btnMainMenuToggler" v-open-mobile-navigation class="navbar-toggler d-lg-none" type="button">
                     &#9776;
                 </button>
             </div>
