--- a/resources/views/Customer/Components/UserLoginHandler.twig
+++ b/resources/views/Customer/Components/UserLoginHandler.twig
@@ -2,7 +2,7 @@
     <div id="login-change">
         <div class="dropdown" v-if="isLoggedIn">
             <a href="#" class="dropdown-toggle" id="accountMenuList" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fa fa-user hidden-sm-up" aria-hidden="true"></i> 
+                <i class="fa fa-user d-sm-none" aria-hidden="true"></i> 
                 <span class="hidden-xs-down">{{ trans("Ceres::Template.loginHello", {"username": "${username}"}) }}</span>
             </a>
             <div class="account-menu dropdown-menu dropdown-menu-right small">
