--- a/resources/views/ItemList/Components/Filter/ItemFilter.twig
+++ b/resources/views/ItemList/Components/Filter/ItemFilter.twig
@@ -6,7 +6,7 @@
         </div>
         <div v-else>
             <div class="form-check" v-for="value in facets" :key="value.id">
-                <input :id="'option-' + value.id" class="form-check-input hidden-xs-up" type="checkbox" :checked="isSelected(value.id)" @change="updateFacet(value)" :disabled="isLoading">
+                <input :id="'option-' + value.id" class="form-check-input d-xs-none" type="checkbox" :checked="isSelected(value.id)" @change="updateFacet(value)" :disabled="isLoading">
                 <label :for="'option-' + value.id" class="form-check-label">
                     ${ value.name }
                 </label>
