--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -15,7 +15,7 @@
         <i class="fa fa-chevron-up"></i>
     </div>
 
-    <div class="to-top hidden-md-up" v-scroll-to-top>
+    <div class="to-top d-md-none" v-scroll-to-top>
         <i class="fa fa-arrow-up" aria-hidden="true"></i>
     </div>
 
@@ -89,7 +89,7 @@
                     </nav>
                 </div>
             {% endfor %}
-            <hr class="hidden-sm-up m-y-2">
+            <hr class="d-sm-none m-y-2">
             <div class="col-xs-6 col-sm-3">
                 <div class="footer-column">
                     {{ LayoutContainer.show("Ceres::Footer.RowOne") }}
