--- a/resources/views/Category/Item/Partials/CategoryViewFilter.twig
+++ b/resources/views/Category/Item/Partials/CategoryViewFilter.twig
@@ -1,5 +1,5 @@
 <aside class="cmp cmp-filters row">
-    <div class="col-xs-12 filters-header hidden-lg-up">
+    <div class="col-xs-12 filters-header d-lg-none">
         <strong class="title">Filtern nach</strong>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#filters-content">
             <i class="fa fa-caret-down text-muted" aria-hidden="true"></i>
