--- a/resources/views/Basket/Basket.twig
+++ b/resources/views/Basket/Basket.twig
@@ -35,7 +35,7 @@
 
             <div class="col-md-5 float-right" v-stick-in-parent>
                 <div class="col-xs-12 p-y-2 bg-white">
-                    <hr class="hidden-md-up">
+                    <hr class="d-md-none">
                     <basket-totals class="m-b-2" template="#vue-basket-totals"></basket-totals>
 
                     <hr>
