replaced class pos-f-t with fixed-top

--- a/resources/scss/ceres/views/PageDesign/language-select.scss
+++ b/resources/scss/ceres/views/PageDesign/language-select.scss
@@ -142,8 +142,8 @@
 	background-image: url(../images/flags/4x3/no.svg);
 }
 
-.pos-f-t .cmp-country-settings,
-.pos-f-t .cmp-currency-select
+.fixed-top .cmp-country-settings,
+.fixed-top .cmp-currency-select
 {
 	top: auto;
 }
