--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -230,7 +230,7 @@
         {
             function calculateBodyOffset()
             {
-                if ( header.classList.contains('pos-f-t'))
+                if ( header.classList.contains('fixed-top'))
                 {
                     var bodyOffset = 0;
                     // Get current header with children
