--- a/resources/scss/ceres/common/_buttons.scss
+++ b/resources/scss/ceres/common/_buttons.scss
@@ -82,7 +82,7 @@ button:focus {
 
 // create gray outline button 
 .btn-outline-default{
-	@include button-outline-variant($btn-default-color);
+	@include button-outline-variant($gray-light);
 }
 
 .btn {
