renamed margin class m-{direction}-{breakpoint} to new bootstrap syntax + new $spacers

--- a/resources/views/Basket/Components/BasketPreview.twig
+++ b/resources/views/Basket/Components/BasketPreview.twig
@@ -32,7 +32,7 @@
                 <basket-totals template="#vue-basket-totals"></basket-totals>
 
                 <div class="basket-preview-footer row">
-                    <div class="col-xs-6 col-sm-6 m-b-1">
+                    <div class="col-xs-6 col-sm-6 mb-3">
                         <a v-waiting-animation-infinite
                         href="{{ urls.basket }}"
                         rel="nofollow"
