--- a/resources/views/Containers/Partials/ItemLists/ItemListHeader.twig
+++ b/resources/views/Containers/Partials/ItemLists/ItemListHeader.twig
@@ -22,7 +22,7 @@
 {% endif %}
 
 {% if isHome %}
-    <div class="section-header m-b-1">
+    <div class="section-header mb-3">
         <h2>{{ header }}</h2>
     </div>
 {% else %}
