--- a/resources/views/Customer/Components/GuestLogin.twig
+++ b/resources/views/Customer/Components/GuestLogin.twig
@@ -1,6 +1,6 @@
 <script type="x/template" id="vue-guest-login">
     <div>
-        <form :id="'guest-login-form-' +_uid" class="m-b-1 login-pwd-reset">
+        <form :id="'guest-login-form-' +_uid" class="mb-3 login-pwd-reset">
             <div class="modal fade" id="guestLogin" tabindex="-1" role="dialog">
                 <div class="modal-dialog">
                     <div class="modal-content">
