--- a/resources/views/Item/Components/GraduatedPrices.twig
+++ b/resources/views/Item/Components/GraduatedPrices.twig
@@ -9,7 +9,7 @@
                     <td>
                         ${ price.unitPrice.formatted }
                         <transition name="fade">
-                            <i class="fa fa-lg fa-check-circle-o m-l-1" v-if="index === activeGraduationIndex" aria-hidden="true"></i>
+                            <i class="fa fa-lg fa-check-circle-o ml-3" v-if="index === activeGraduationIndex" aria-hidden="true"></i>
                         </transition>
                     </td>
                 </tr>
