--- a/resources/views/MyAccount/Components/AccountSettings.twig
+++ b/resources/views/MyAccount/Components/AccountSettings.twig
@@ -1,6 +1,6 @@
 <script type="x/template" id="vue-account-settings">
     <div class="card-block">
-        <div class="row  m-b-1">
+        <div class="row  mb-3">
             <div class="col-sm-4">
                 <strong>{{ trans("Ceres::Template.myAccountEmail") }}</strong>
             </div>
