--- a/resources/views/MyAccount/Components/BankDataSelect.twig
+++ b/resources/views/MyAccount/Components/BankDataSelect.twig
@@ -1,6 +1,6 @@
 <script type="x/template" id="vue-bank-data-select">
     <div>
-        <div class="cmp cmp-address-list m-b-3">
+        <div class="cmp cmp-address-list mb-5">
 
             <div class="items items-empty" v-show="userBankData.length == 0">
                 <div class="card">
