--- a/resources/views/MyAccount/Components/ChangePaymentMethod.twig
+++ b/resources/views/MyAccount/Components/ChangePaymentMethod.twig
@@ -55,7 +55,7 @@
                                 <p class="warning-text">{{ trans("Ceres::Template.orderHistoryChangePaymentNotSwitchableWarning") }}</p>
                             </div>
 
-                            <div class="cmp cmp-method-list list m-b-3">
+                            <div class="cmp cmp-method-list list mb-5">
                             <ul class="method-list">
                                 <div class="method-list-item current-payment-text">
                                     <div class="content alert-info current-payment-width">
