--- a/resources/views/MyAccount/Components/History.twig
+++ b/resources/views/MyAccount/Components/History.twig
@@ -2,7 +2,7 @@
 {{ component( "Ceres::MyAccount.Components.OrderReturnHistory" ) }}
 
 <script type="x/template" id="vue-history">
-	<div class="page-content basket history container-max m-b-3">
+	<div class="page-content basket history container-max mb-5">
 		<ul class="nav nav-tabs" role="tablist">
 			<li class="nav-item">
 				<a class="nav-link active" data-toggle="tab" href="#order-history-tab" role="tab" aria-expanded="true">{{ trans("Ceres::Template.orderHistory") }}</a>
