--- a/resources/views/OrderReturn/OrderReturnConfirmation.twig
+++ b/resources/views/OrderReturn/OrderReturnConfirmation.twig
@@ -7,8 +7,8 @@
 
 {% block PageBody %}
 
-    <div class="page-content basket order-return container-max m-b-3 m-t-1">
-        <div class="row m-b-3">
+    <div class="page-content basket order-return container-max mb-5 mt-3">
+        <div class="row mb-5">
             <div class="col-xs-12">
                 <h2 class="h1">{{ trans("Ceres::Template.returnConfirmationThanks") }}</h2>
                 <p>{{ trans('Ceres::Template.returnConfirmationInfo') }}</p>
