--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -109,7 +109,7 @@
                             <div class="modal-title h3">
                                 {{ trans("Ceres::Template.regCreateAccount") }}
 
-                                <popper v-cloak class="pull-right m-r-1">
+                                <popper v-cloak class="pull-right mr-3">
                                     <button slot="handle" class="btn btn-icon btn-secondary btn-sm">
                                         <i class="fa fa-info"></i>
                                     </button>
@@ -117,9 +117,9 @@
                                         {{ trans("Ceres::Template.regContactInformations") }}
                                     </div>
                                     <ul slot="content" class='p-l-1'>
-                                        <li class='m-b-1'>{{ trans('Ceres::Template.regContactInfoText1') }}</li>
-                                        <li class='m-b-1'>{{ trans('Ceres::Template.regContactInfoText2') }}</li>
-                                        <li class='m-b-1'>{{ trans('Ceres::Template.regContactInfoText3') }}</li>
+                                        <li class='mb-3'>{{ trans('Ceres::Template.regContactInfoText1') }}</li>
+                                        <li class='mb-3'>{{ trans('Ceres::Template.regContactInfoText2') }}</li>
+                                        <li class='mb-3'>{{ trans('Ceres::Template.regContactInfoText3') }}</li>
                                         <li>{{ trans('Ceres::Template.regContactInfoText4') }}</li>
                                     </ul>
                                 </popper>
