--- a/resources/views/StaticPages/CancellationForm.twig
+++ b/resources/views/StaticPages/CancellationForm.twig
@@ -14,7 +14,7 @@
 
     <div class="container-max page-content">
         <div class="row">
-            <div class="col-xs-12 m-b-3">
+            <div class="col-xs-12 mb-5">
                 {% autoescape false %}
                     <h1 class="print-header">{{ trans("Ceres::Template.cancellationForm", {"hyphen": "&shy;"}) }}</h1>
                 {% endautoescape %}
