--- a/resources/views/Basket/Components/BasketListItem.twig
+++ b/resources/views/Basket/Components/BasketListItem.twig
@@ -113,7 +113,7 @@
                 <div class="item-additional-information-container">
                     <div class="item-additional-information" v-if="size === 'large' && showMoreInformation">
                         {% if "basket.item.item_id" in basketDetailsData %}
-                            <div class="m-t-1">
+                            <div class="mt-3">
                                 <strong>{{ trans("Ceres::Template.basketItemId") }}:</strong>
                                 <span>${ basketItem.itemId }</span>
                             </div>
