--- a/resources/views/Basket/Components/BasketPreviewHover.twig
+++ b/resources/views/Basket/Components/BasketPreviewHover.twig
@@ -7,7 +7,7 @@
         <div class="basket-preview-hover-wrapper-inner">
             <div class="basket-preview-hover" :class="{ 'empty': !basketItems.length }">
 
-                <header class="basket-header m-b-2 d-lg-none">
+                <header class="basket-header mb-4 d-lg-none">
                     <div class="d-inline-block m-a-0 h3">{{ trans("Ceres::Template.basketPreview") }}</div>
                     <button v-toggle-basket-preview type="button" class="close" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
@@ -19,7 +19,7 @@
 
                 <div class="basket-totals" v-if="basketItems.length">
 
-                    <hr class="m-b-2">
+                    <hr class="mb-4">
 
                     <div v-if="basketNotifications.length > 0">
                         <div class="alert fade in alert-danger" v-for="notification in basketNotifications">
