--- a/resources/views/Category/Item/CategoryItem.twig
+++ b/resources/views/Category/Item/CategoryItem.twig
@@ -23,20 +23,20 @@
 
     <div class="categoriegrid page-content container-max">
         {% if not ceresConfig.item.showCategoryImage %}
-            <div class="row m-t-1">
+            <div class="row mt-3">
                 <div class="col-xs-12">
                     <h1 class="h2 category-title">{{ category.details[0].name }}</h1>
                     {% if categoryDescriptionTop == "description1" or categoryDescriptionTop == "both" %}
-                        <div class="category-description m-b-1" data-category-description="1">{{ category.details[0].description | raw }}</div>
+                        <div class="category-description mb-3" data-category-description="1">{{ category.details[0].description | raw }}</div>
                     {% endif %}
                     {% if categoryDescriptionTop == "description2" or categoryDescriptionTop == "both" %}
-                        <div class="category-description m-b-1" data-category-description="2">{{ category.details[0].description2 | raw }}</div>
+                        <div class="category-description mb-3" data-category-description="2">{{ category.details[0].description2 | raw }}</div>
                     {% endif %}
                 </div>
             </div>
         {% endif %}
 
-        <div class="list-controls m-b-3">
+        <div class="list-controls mb-5">
             <div class="list-controls-inner">
                 <div class="row">
                     <div class="col-xs-12">
@@ -61,7 +61,7 @@
         </div>
 
         {% if ceresConfig.pagination.position in ['top', 'top_bottom'] %}
-            <div class="list-controls m-b-3 row">
+            <div class="list-controls mb-5 row">
                 <div class="col-xs-12">
                     <pagination template="#vue-pagination"></pagination>
                     <noscript>
@@ -109,7 +109,7 @@
             </div>
         </div>
         {% if ceresConfig.pagination.position in ['bottom', 'top_bottom'] %}
-            <div class="list-controls m-b-3 row">
+            <div class="list-controls mb-5 row">
                 <div class="col-xs-12">
                     <pagination template="#vue-pagination"></pagination>
                     <noscript>
@@ -121,10 +121,10 @@
 
         <div class="col-xs-12">
             {% if categoryDescriptionBottom == "description1" or categoryDescriptionBottom == "both" %}
-                <div class="category-description m-b-1" data-category-description="1">{{ category.details[0].description | raw }}</div>
+                <div class="category-description mb-3" data-category-description="1">{{ category.details[0].description | raw }}</div>
             {% endif %}
             {% if categoryDescriptionBottom == "description2" or categoryDescriptionBottom == "both" %}
-                <div class="category-description m-b-1" data-category-description="2">{{ category.details[0].description2 | raw }}</div>
+                <div class="category-description mb-3" data-category-description="2">{{ category.details[0].description2 | raw }}</div>
             {% endif %}
         </div>
     </div>
