--- a/resources/views/Category/Item/Partials/CategoryListItem.twig
+++ b/resources/views/Category/Item/Partials/CategoryListItem.twig
@@ -143,7 +143,7 @@
 
             
             {# {% if tags > 0 %}
-                <div class="m-t-1 tag-list">
+                <div class="mt-3 tag-list">
                     {% for tag in tags %}
                         <span class="tag bg-black">
                             {{ tag.names.name }}
