--- a/resources/views/Category/Item/Partials/CategoryViewFilter.twig
+++ b/resources/views/Category/Item/Partials/CategoryViewFilter.twig
@@ -9,7 +9,7 @@
 
         <div class="row">
 
-            <div class="filter-group col-xs-6 col-sm-4 col-md-3 m-b-1">
+            <div class="filter-group col-xs-6 col-sm-4 col-md-3 mb-3">
                 <div class="input-unit" data-toggle="collapse" data-target="#filterPreis" aria-expanded="false" aria-controls="filterPreis">
                     <span class="input-unit-label">Preis</span>
                     <div class="input-unit-preview">
@@ -24,7 +24,7 @@
             </div>
 
             <!-- FILTER -->
-            <div class="filter-group col-xs-6 col-sm-4 col-md-3 m-b-1">
+            <div class="filter-group col-xs-6 col-sm-4 col-md-3 mb-3">
                 <div class="input-unit" data-toggle="collapse" data-target="#filterAmount" aria-expanded="false" aria-controls="filterAmount">
                     <span class="input-unit-label">Stückzahl</span>
                     <div class="input-unit-preview">
@@ -51,7 +51,7 @@
 
             </div>
 
-            <div class="filter-group col-xs-6 col-sm-4 col-md-3 m-b-1">
+            <div class="filter-group col-xs-6 col-sm-4 col-md-3 mb-3">
                 <div class="input-unit" data-toggle="collapse" data-target="#filterColors" aria-expanded="false" aria-controls="filterColors">
                     <span class="input-unit-label">Farben</span>
                     <div class="input-unit-preview">
@@ -91,7 +91,7 @@
                 </div>
             </div>
 
-            <div class="filter-group col-xs-6 col-sm-4 col-md-3 m-b-1">
+            <div class="filter-group col-xs-6 col-sm-4 col-md-3 mb-3">
                 <div class="input-unit" data-toggle="collapse" data-target="#filterBrands" aria-expanded="false" aria-controls="filterBrands">
                     <span class="input-unit-label">Marken</span>
                     <div class="input-unit-preview">
