--- a/resources/views/Checkout/CheckoutView.twig
+++ b/resources/views/Checkout/CheckoutView.twig
@@ -23,7 +23,7 @@
     <div class="page-content checkout container-max">
         {% set overrideCheckout = LayoutContainer.show("Ceres::Checkout") %}
         {% if overrideCheckout|trim is empty %}
-            <div class="row m-t-1">
+            <div class="row mt-3">
                 <div class="col-xs-12">
                     <h1 class="h2">{{ trans("Ceres::Template.checkout") }}</h1>
                     <hr>
@@ -40,7 +40,7 @@
                                 {% if overrideAddressLists|trim is empty %}
                                     {% set overrideBillingAddress = LayoutContainer.show("Ceres::Checkout.BillingAddress") %}
                                     {% if overrideBillingAddress|trim is empty %}
-                                        <header class="m-b-1">
+                                        <header class="mb-3">
                                             <h3>{{ trans("Ceres::Template.checkoutInvoiceAddress") }}</h3>
                                         </header>
 
@@ -59,7 +59,7 @@
 
                                     {% set overrideShippingAddress = LayoutContainer.show("Ceres::Checkout.ShippingAddress") %}
                                     {% if overrideShippingAddress|trim is empty %}
-                                        <header class="m-b-1">
+                                        <header class="mb-3">
                                             <h3>{{ trans("Ceres::Template.checkoutShippingAddress") }}</h3>
                                         </header>
 
@@ -78,7 +78,7 @@
                                     {{ overrideAddressLists }}
                                 {% endif %}
                                 {% set overrideShippingProfiles = LayoutContainer.show("Ceres::Checkout.ShippingProfileList") %}
-                                <header class="m-b-1">
+                                <header class="mb-3">
                                     <h3>{{ trans("Ceres::Template.checkoutShippingProfile") }}</h3>
                                 </header>
 
@@ -93,7 +93,7 @@
                                 {{ LayoutContainer.show("Ceres::Checkout.AfterShippingProfileList") }}
 
                                 {% set overridePaymentList = LayoutContainer.show("Ceres::Checkout.PaymentList") %}
-                                <header class="m-b-1">
+                                <header class="mb-3">
                                     <h3>{{ trans("Ceres::Template.checkoutPaymentMethod") }}</h3>
                                 </header>
 
