--- a/resources/views/Checkout/OrderConfirmation.twig
+++ b/resources/views/Checkout/OrderConfirmation.twig
@@ -15,8 +15,8 @@
     {% set addContentAfterOrderDetailsRow = LayoutContainer.show("Ceres::OrderConfirmation.AddContentAfterOrderDetailsRow") %}
 
     {% if overrideConfirmation|trim is empty %}
-        <div class="page-content myaccount container-max m-b-3 m-t-1 p-b-3">
-            <div class="row m-b-3">
+        <div class="page-content myaccount container-max mb-5 mt-3 p-b-3">
+            <div class="row mb-5">
                 <div class="col-xs-12">
                     <h1 class="h2">{{ trans("Ceres::Template.orderConfirmationThanks") }}</h1>
                     <p>{{ trans("Ceres::Template.orderConfirmationWillBeProcessed") }}</p>
