--- a/resources/views/Checkout/OrderDetails.twig
+++ b/resources/views/Checkout/OrderDetails.twig
@@ -7,7 +7,7 @@
 {% set basketTotalsCurrency = totals.currency %}
 
 <div class="row">
-    <div class="col-md-6 m-b-2">
+    <div class="col-md-6 mb-4">
         <div class="card small">
             <!-- ORDER -->
             <div class="card-header">
@@ -42,7 +42,7 @@
                         </span>
                     </div>
 
-                    <div class="row m-t-1">
+                    <div class="row mt-3">
                         <strong class="col-xs-6 col-sm-5">{{ trans("Ceres::Template.orderConfirmationShippingAddress") }}</strong>
                         <span class="col-xs-6 col-sm-7">
                             {% if orderData.order.billingAddress.id == orderData.order.deliveryAddress.id %}
@@ -153,7 +153,7 @@
                             </a>
 
                             {% if splitItemBundle != "1" and item.bundleType == "bundle" %}
-                                <div class="m-b-1 item-bundle">
+                                <div class="mb-3 item-bundle">
                                     {% for bundleComponent in item.bundleComponents %}
                                         <div>
                                             <span class="text-muted">{{ bundleComponent.quantity }} x</span>
