--- a/resources/views/Customer/Components/AddressSelect/AddressSelect.twig
+++ b/resources/views/Customer/Components/AddressSelect/AddressSelect.twig
@@ -1,7 +1,7 @@
 {{ component( "Ceres::Customer.Components.AddressSelect.CreateUpdateAddress") }}
 <script type="x/template" id="vue-address-select">
     <div>
-        <div class="cmp cmp-address-list m-b-2">
+        <div class="cmp cmp-address-list mb-4">
             <div class="dropdown items">
 
                 <div class="component-loading" :id="'addressMultiSelect' + _uid"
