--- a/resources/views/Customer/Components/LoginView.twig
+++ b/resources/views/Customer/Components/LoginView.twig
@@ -5,18 +5,18 @@
 
 <script type="x/template" id="vue-login-view" >
     <div class="container-max login">
-        <div class="row m-b-3">
+        <div class="row mb-5">
             <div class="col-sm-10 offset-sm-1 col-md-6 offset-md-3">
 
                 <div>
-                    <h1 class="login-view-title m-b-3">{{ trans("Ceres::Template.login") }}</h1>
+                    <h1 class="login-view-title mb-5">{{ trans("Ceres::Template.login") }}</h1>
                     <login template="#vue-login" backlink="{{ backlink | url_encode }}" has-to-forward="true"></login>
                 </div>
 
                 <hr>
                 <div class="row">
                     <div class="col-sm-{% if 'my-account' not in backlink %}6{% else %}12{% endif %}">
-                        <a class="btn btn-primary btn-block m-b-1" href="{{ urls.registration }}{% if backlink | trim is not empty %}?backlink={{ backlink | url_encode}}{% endif %}">
+                        <a class="btn btn-primary btn-block mb-3" href="{{ urls.registration }}{% if backlink | trim is not empty %}?backlink={{ backlink | url_encode}}{% endif %}">
                             <i class="fa fa-user-plus" aria-hidden="true"></i>
                             {{ trans("Ceres::Template.loginRegister") }}
                         </a>
@@ -24,7 +24,7 @@
 
                     {% if "my-account" not in backlink %}
                         <div class="col-sm-6">
-                            <button class="btn btn-primary btn-block m-b-1" @click="openGuestModal()">
+                            <button class="btn btn-primary btn-block mb-3" @click="openGuestModal()">
                                 <i class="fa fa-shopping-bag" aria-hidden="true"></i>
                                 {{ trans("Ceres::Template.loginOrderAsGuest") }}
                             </button>
