--- a/resources/views/Customer/Components/ResetPasswordForm.twig
+++ b/resources/views/Customer/Components/ResetPasswordForm.twig
@@ -1,8 +1,8 @@
 {% import "Ceres::PageDesign.Macros.LayoutContainer" as LayoutContainer %}
 
 <script type="x/template" id="vue-reset-password-form">
-    <div class="row m-b-3">
-        <form :id="'reset-password-form-' + _uid" class="m-b-1">
+    <div class="row mb-5">
+        <form :id="'reset-password-form-' + _uid" class="mb-3">
             <div class="col-xs-12 col-sm-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
                 <span class="error-save-pwd-msg">{{ trans("Ceres::Template.resetPwCheckPassword") }}</span>
                 <div class="input-unit" data-validate="password">
@@ -32,7 +32,7 @@
             </div>
         </form>
 
-        <div class="col-xs-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 m-t-1 text-sm-right">
+        <div class="col-xs-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 mt-3 text-sm-right">
             <button @click="validatePassword" class="btn btn-primary save-new-pwd-btn" :disabled="isDisabled">
                 <i class="fa fa-floppy-o" aria-hidden="true"></i>
                 {{ trans("Ceres::Template.resetPwSave") }}
