--- a/resources/views/Customer/Register.twig
+++ b/resources/views/Customer/Register.twig
@@ -8,8 +8,8 @@
 {% block PageBody %}   
 
     {{ component( "Ceres::Customer.Components.Registration") }}
-    <div class="registration container-max m-t-1">
-        <div class="row m-b-3">
+    <div class="registration container-max mt-3">
+        <div class="row mb-5">
             <div class="col-sm-10 offset-sm-1 col-md-6 offset-md-3">
                 <h1>
                     {{ trans("Ceres::Template.regRegisterAccount") }}
@@ -22,9 +22,9 @@
                             {{ trans("Ceres::Template.regContactInformations") }}
                         </div>
                         <ul slot="content" class='p-l-1'>
-                            <li class='m-b-1'>{{ trans('Ceres::Template.regContactInfoText1') }}</li>
-                            <li class='m-b-1'>{{ trans('Ceres::Template.regContactInfoText2') }}</li>
-                            <li class='m-b-1'>{{ trans('Ceres::Template.regContactInfoText3') }}</li>
+                            <li class='mb-3'>{{ trans('Ceres::Template.regContactInfoText1') }}</li>
+                            <li class='mb-3'>{{ trans('Ceres::Template.regContactInfoText2') }}</li>
+                            <li class='mb-3'>{{ trans('Ceres::Template.regContactInfoText3') }}</li>
                             <li>{{ trans('Ceres::Template.regContactInfoText4') }}</li>
                         </ul>
                     </popper>
