--- a/resources/views/Item/Components/ItemBundle.twig
+++ b/resources/views/Item/Components/ItemBundle.twig
@@ -1,6 +1,6 @@
 <script type="x/template" id="vue-item-bundle">
 	<div>
-		<div class="m-b-1 item-bundle" v-if="showItemBundleItems">
+		<div class="mb-3 item-bundle" v-if="showItemBundleItems">
 			<div ref="bundleSetting" class="hidden">{{ services.webstoreConfig.getWebstoreConfig().dontSplitItemBundle }}</div>
 			<strong>{{ trans("Ceres::Template.itemBundleContent") }}</strong>
 			<div v-for="item in bundleComponents">
