--- a/resources/views/Item/Components/OrderPropertyList.twig
+++ b/resources/views/Item/Components/OrderPropertyList.twig
@@ -1,7 +1,7 @@
 {{ component( "Ceres::Item.Components.OrderPropertyListGroup" ) }}
 
 <script type="x/template" id="vue-order-property-list">
-    <div class="order-property-slider m-b-1">
+    <div class="order-property-slider mb-3">
         <div class="order-property-slider-inner" :style="{transform: 'translateX(-' + (activeSlide * 100) + '%)'}">
             <div v-for="(propertyGroup, index) in sortedGroupedProperties" :class="{'active': index === activeSlide}">
                 <order-property-list-group :key="propertyGroup.id" :property-group="propertyGroup"></order-property-list-group>
