--- a/resources/views/ItemList/ItemListView.twig
+++ b/resources/views/ItemList/ItemListView.twig
@@ -10,13 +10,13 @@
     {{ component( "Ceres::ItemList.Components.Filter.ItemFilterTagList") }}
 
     <div class="categoriegrid page-content container-max">
-        <div class="row m-t-1">
+        <div class="row mt-3">
             <div class="col-xs-12">
                 <h1 class="h2" id="searchPageTitle">{{ trans("Ceres::Template.itemSearchResults") }} {{ searchString }}</h1>
             </div>
         </div>
 
-        <div class="list-controls m-b-3">
+        <div class="list-controls mb-5">
             <div class="list-controls-inner">
                 <div class="row">
                     <div class="col-xs-12">
@@ -40,7 +40,7 @@
         </div>
 
         {% if ceresConfig.pagination.position in ['top', 'top_bottom'] %}
-            <div class="list-controls m-b-3 row">
+            <div class="list-controls mb-5 row">
                 <div class="col-xs-12">
                     <pagination template="#vue-pagination"></pagination>
                 </div>
@@ -62,7 +62,7 @@
         </div>
 
         {% if ceresConfig.pagination.position in ['bottom', 'top_bottom'] %}
-            <div class="list-controls m-b-3 row">
+            <div class="list-controls mb-5 row">
                 <div class="col-xs-12">
                     <pagination template="#vue-pagination"></pagination>
                 </div>
