--- a/resources/views/MyAccount/Components/OrderHistory.twig
+++ b/resources/views/MyAccount/Components/OrderHistory.twig
@@ -21,7 +21,7 @@
 <script type="x/template" id="vue-order-history">
     {% if orderList.totalsCount > 0 %}
     <div class="form-group">
-        <div class="row m-b-1">
+        <div class="row mb-3">
             <div class="col-xs-12 col-md-12 col-lg-12">
                 <!-- ORDER PAGINATION -->
                 {% if orderList.lastPageNumber > 1 %}
