--- a/resources/views/MyAccount/Components/OrderReturnHistory.twig
+++ b/resources/views/MyAccount/Components/OrderReturnHistory.twig
@@ -2,7 +2,7 @@
 
 <script type="x/template" id="vue-order-return-history">
 	<div class="form-group">
-		<div class="row m-b-1">
+		<div class="row mb-3">
             <div class="col-xs-12 col-md-12 col-lg-12">
 				<!-- RETURN PAGINATION -->
                 <div class="clearfix history-pagination" v-if="returnsList.totalsCount > itemsPerPage">
