--- a/resources/views/Newsletter/Components/NewsletterInput.twig
+++ b/resources/views/Newsletter/Components/NewsletterInput.twig
@@ -4,7 +4,7 @@
                 <div class="col-xs-12" v-if="title">
                     <span class="h1">${ title }</span>
                 </div>
-                <div class="col-xs-12 m-t-1" v-if="subTitle">
+                <div class="col-xs-12 mt-3" v-if="subTitle">
                     <p>${ subTitle }</p>
                 </div>
             </div>
@@ -48,7 +48,7 @@
                     </label>
                 </div>
 
-                <div class="col-xs-12 m-t-1">
+                <div class="col-xs-12 mt-3">
                         <div class="input-group-btn">
                             <button type="button" class="btn btn-block" :class="'btn-' + appearance" @click="validateData" :disabled="isDisabled">
                                 <i v-waiting-animation="isDisabled" class="fa fa-paper-plane-o" aria-hidden="true"></i>
