changed all bootstrap classes concerning paddings from p-{direction}-{spacer} to new syntax p{direction}-{spacer} (new spacers incl.)

--- a/resources/scss/ceres/common/_common.scss
+++ b/resources/scss/ceres/common/_common.scss
@@ -13,7 +13,7 @@ body .wrapper-main{
 }
 
 .page-content{
-    @extend .p-t-1;
+    @extend .pt-3;
     background-color: $gray-lightest;
     &.basket,
     &.checkout,
