--- a/resources/views/Customer/Components/Registration.twig
+++ b/resources/views/Customer/Components/Registration.twig
@@ -19,7 +19,7 @@
                             <div slot="title">
                                 {{ trans("Ceres::Template.regPasswordHintTitle") }}
                             </div>
-                            <ul slot="content" class="p-l-1">
+                            <ul slot="content" class="pl-3">
                                 <li>{{ trans("Ceres::Template.regPasswordHintLength") }}</li>
                                 <li>{{ trans("Ceres::Template.regPasswordHintDigit") }}</li>
                                 <li>{{ trans("Ceres::Template.regPasswordHintChar") }}</li>
