--- a/resources/views/Customer/Components/ResetPasswordForm.twig
+++ b/resources/views/Customer/Components/ResetPasswordForm.twig
@@ -11,7 +11,7 @@
                         <div slot="title">
                             {{ trans("Ceres::Template.resetPwPasswordHintTitle") }}
                         </div>
-                        <ul slot="content" class="p-l-1">
+                        <ul slot="content" class="pl-3">
                             <li>{{ trans("Ceres::Template.resetPwPasswordHintLength") }}</li>
                             <li>{{ trans("Ceres::Template.resetPwPasswordHintDigit") }}</li>
                             <li>{{ trans("Ceres::Template.resetPwPasswordHintChar") }}</li>
