--- a/resources/views/MyAccount/Components/BankDataSelect.twig
+++ b/resources/views/MyAccount/Components/BankDataSelect.twig
@@ -6,7 +6,7 @@
                 <div class="card">
                     <span class="item-inner">
                         <span class="item-content">
-                            <p class="text-muted small font-italic p-t-1">- {{ trans("Ceres::Template.myAccountBankNoBankData") }} -</p>
+                            <p class="text-muted small font-italic pt-3">- {{ trans("Ceres::Template.myAccountBankNoBankData") }} -</p>
                         </span>
                     </span>
                 </div>
@@ -22,7 +22,7 @@
                         </span>
 
                         <span class="item-content" v-show="!selectedBankData">
-                            <p class="text-muted small font-italic p-t-1">- {{ trans("Ceres::Template.myAccountPleaseSelect") }} -</p>
+                            <p class="text-muted small font-italic pt-3">- {{ trans("Ceres::Template.myAccountPleaseSelect") }} -</p>
                         </span>
                     </span>
                 </div>
