--- a/resources/views/Basket/Basket.twig
+++ b/resources/views/Basket/Basket.twig
@@ -24,7 +24,7 @@
 
         <div class="row">
             <div class="col-md-7">
-                <div class="col-xs-12 p-t-2 bg-white">
+                <div class="col-xs-12 pt-4 bg-white">
                     <basket-list template="#vue-basket-list" size="large"></basket-list>
                 </div>
             </div>
