--- a/resources/views/Basket/Components/BasketPreview.twig
+++ b/resources/views/Basket/Components/BasketPreview.twig
@@ -17,9 +17,9 @@
             </div>
         </div>
 
-        <div class="basket-preview-content row p-l-1 p-r-1">
+        <div class="basket-preview-content row pl-3 pr-3">
             <!-- BASKET LIST -->
-            <div class="list col-sm-7 col-md-12 p-t-1">
+            <div class="list col-sm-7 col-md-12 pt-3">
                 <div class="cmp cmp-basket-preview-list">
                     <basket-list template="#vue-basket-list" size="small"></basket-list>
                 </div>
@@ -27,7 +27,7 @@
             <!-- ./BASKET LIST -->
 
             <!-- BASKET PREVIEW BOTTOM -->
-            <div class="bg-faded totals col-sm-5 col-md-12 p-t-1">
+            <div class="bg-faded totals col-sm-5 col-md-12 pt-3">
 
                 <basket-totals template="#vue-basket-totals"></basket-totals>
 
