--- a/resources/views/Category/Item/Partials/CategoryParallaxImage.twig
+++ b/resources/views/Category/Item/Partials/CategoryParallaxImage.twig
@@ -5,7 +5,7 @@
         <div class="container-max">
             <div class="parallax-text-wrapper">
                 <div class="parallax-text-container">
-                    <h1 class="h2 p-t-2 category-title">{{ category.details[0].name | raw }}</h1>
+                    <h1 class="h2 pt-4 category-title">{{ category.details[0].name | raw }}</h1>
                     {% if categoryDescriptionTop == "description1" or categoryDescriptionTop == "both" %}
                         <div class="category-description mb-3" data-category-description="1">{{ category.details[0].description | raw }}</div>
                     {% endif %}
