--- a/resources/views/Checkout/CheckoutView.twig
+++ b/resources/views/Checkout/CheckoutView.twig
@@ -34,7 +34,7 @@
                 <div class="row" slot-scope="checkoutComp">
                     <!-- ADDRESS SELECT -->
                     <div class="col-md-7">
-                        <div class="col-xs-12 p-t-2 bg-white">
+                        <div class="col-xs-12 pt-4 bg-white">
                             <div id="registry-form-container" class="registry-form-container main-col" data-id="0" data-status="2">
                                 {% set overrideAddressLists = LayoutContainer.show("Ceres::Checkout.AddressLists") %}
                                 {% if overrideAddressLists|trim is empty %}
@@ -111,7 +111,7 @@
                                     <h3>{{ trans("Ceres::Template.checkoutContactWish") }}</h3>
                                 </header>
 
-                                <contact-wish-input class="p-b-1" template="#vue-contact-wish-input"></contact-wish-input>
+                                <contact-wish-input class="pb-3" template="#vue-contact-wish-input"></contact-wish-input>
 
                                 <shipping-privacy-hint-check></shipping-privacy-hint-check>
 
@@ -125,11 +125,11 @@
                     <!-- ./ADDRESS SELECT -->
 
                     <div class="col-md-5 checkout-rightside">
-                        <div class="col-xs-12 bg-white p-t-2">
+                        <div class="col-xs-12 bg-white pt-4">
                             <h3>{{ trans("Ceres::Template.checkoutBasket") }}</h3>
-                            <hr class="m-b-0">
+                            <hr class="mb-0">
                         </div>
-                        <div class="col-xs-12 p-t-2 bg-white">
+                        <div class="col-xs-12 pt-4 bg-white">
                             <aside class="sidebar">
                                 <div class="cmp cmp-checkout-sidebar">
                                     <div class="cmp cmp-basket-preview-list">
@@ -144,7 +144,7 @@
                     </div>
 
                     <div class="col-md-5 checkout-rightside float-right" v-stick-in-parent>
-                        <div class="col-xs-12 p-t-1 bg-white">
+                        <div class="col-xs-12 pt-3 bg-white">
                             <aside class="sidebar">
                                 <div class="cmp cmp-checkout-sidebar">
                                     {{ LayoutContainer.show("Ceres::Checkout.BeforeBasketTotals") }}
@@ -154,7 +154,7 @@
                             </aside>
                         </div>
 
-                        <div class="col-xs-12 p-b-1 bg-white">
+                        <div class="col-xs-12 pb-3 bg-white">
                             {{ LayoutContainer.show("Ceres::Checkout.BeforePlaceOrder") }}
                             <place-order template="#vue-place-order" target-continue="{{ homepageURL }}{% if homepageURL | last != '/'%}/{% endif %}place-order{% if urls.appendTrailingSlash %}/{% endif %}" @payment-response="checkoutComp.showModal($event)"></place-order>
                             {{ LayoutContainer.show("Ceres::Checkout.AfterPlaceOrder") }}
