--- a/resources/views/Customer/Register.twig
+++ b/resources/views/Customer/Register.twig
@@ -21,7 +21,7 @@
                         <div slot="title">
                             {{ trans("Ceres::Template.regContactInformations") }}
                         </div>
-                        <ul slot="content" class='p-l-1'>
+                        <ul slot="content" class='pl-3'>
                             <li class='mb-3'>{{ trans('Ceres::Template.regContactInfoText1') }}</li>
                             <li class='mb-3'>{{ trans('Ceres::Template.regContactInfoText2') }}</li>
                             <li class='mb-3'>{{ trans('Ceres::Template.regContactInfoText3') }}</li>
