--- a/resources/views/ItemList/Components/Filter/ItemFilterPrice.twig
+++ b/resources/views/ItemList/Components/Filter/ItemFilterPrice.twig
@@ -1,11 +1,11 @@
 <script type="x/template" id="vue-item-filter-price">
 	<div class="row inline-form">
-		<div class="col-lg-5 p-r-0 d-table p-b-1">
+		<div class="col-lg-5 pr-0 d-table pb-3">
 			<div class="input-group-addon border-radius-0">${ currency }</div>
 			<input type="number" class="form-control border-radius-0" @focus="selectAll($event)" placeholder="Min" v-model="priceMin">
 		</div>
 
-		<div class="col-lg-5 p-r-0 d-table p-b-1">
+		<div class="col-lg-5 pr-0 d-table pb-3">
 			<div class="input-group-addon border-radius-0">${ currency }</div>
 			<input type="number" class="form-control border-radius-0" @focus="selectAll($event)" placeholder="Max" v-model="priceMax">
 		</div>
